# minimodem

./: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  minimodem.c  simple-tone-generator.c  simpleaudio-win.cpp  simpleaudio.c  simpleaudio_internal.h  win_setitimer.c  win_setitimer.h
third_part/libsndfile/: CMakeLists.txt
